--- a/riverdi-50-stm32u5-lvgl.ioc
+++ b/riverdi-50-stm32u5-lvgl.ioc
@@ -39,14 +39,23 @@ DAC1.DAC_Channel-DAC_OUT2=DAC_CHANNEL_2
 DAC1.IPParameters=DAC_Channel-DAC_OUT1,DAC_Channel-DAC_OUT2
 DMA2D.ColorMode=DMA2D_OUTPUT_RGB565
 DMA2D.IPParameters=ColorMode
+FDCAN1.AutoRetransmission=ENABLE
 FDCAN1.CalculateBaudRateNominal=1000000
 FDCAN1.CalculateTimeBitNominal=1000
-FDCAN1.CalculateTimeQuantumNominal=100.0
+FDCAN1.CalculateTimeQuantumNominal=50.0
+FDCAN1.ClockDivider=FDCAN_CLOCK_DIV1
+FDCAN1.DataPrescaler=8
+FDCAN1.DataSyncJumpWidth=16
+FDCAN1.DataTimeSeg1=14
+FDCAN1.DataTimeSeg2=5
+FDCAN1.ExtFiltersNbr=2
 FDCAN1.FrameFormat=FDCAN_FRAME_CLASSIC
-FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal,FrameFormat,NominalTimeSeg1,NominalTimeSeg2,NominalPrescaler
-FDCAN1.NominalPrescaler=16
-FDCAN1.NominalTimeSeg1=4
+FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal,FrameFormat,NominalTimeSeg1,NominalTimeSeg2,NominalPrescaler,NominalSyncJumpWidth,AutoRetransmission,TransmitPause,ClockDivider,DataPrescaler,DataSyncJumpWidth,DataTimeSeg1,DataTimeSeg2,ExtFiltersNbr
+FDCAN1.NominalPrescaler=8
+FDCAN1.NominalSyncJumpWidth=16
+FDCAN1.NominalTimeSeg1=14
 FDCAN1.NominalTimeSeg2=5
+FDCAN1.TransmitPause=ENABLE
 FLASH.B1_BLOCK_active=true
 FLASH.B1_endPage=255
 FLASH.B2_BLOCK_active=true
@@ -439,7 +448,8 @@ PB6.Signal=I2C4_SCL
 PB7.Locked=true
 PB7.Mode=Asynchronous
 PB7.Signal=USART1_RX
-PB8.GPIOParameters=GPIO_Speed
+PB8.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PB8.GPIO_PuPd=GPIO_PULLUP
 PB8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB8.Locked=true
 PB8.Mode=FDCAN_Activate
@@ -777,7 +787,7 @@ ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32U599NJHxQ
 ProjectManager.FirmwarePackage=STM32Cube FW_U5 V1.7.0
-ProjectManager.FreePins=false
+ProjectManager.FreePins=true
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0xE000
 ProjectManager.KeepUserCode=true
@@ -793,7 +803,7 @@ ProjectManager.ProjectName=riverdi-50-stm32u5-lvgl
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0xE000
-ProjectManager.TargetToolchain=STM32CubeIDE
+ProjectManager.TargetToolchain=CMake
 ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
