--- a/riverdi-50-stm32u5-lvgl.ioc
+++ b/riverdi-50-stm32u5-lvgl.ioc
@@ -1,13 +1,4 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_11
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,MonitoredBy-0\#ChannelRegularConversion,NbrOfConversionFlag,SingleDiff-0\#ChannelRegularConversion,master
-ADC1.MonitoredBy-0\#ChannelRegularConversion=__NULL
-ADC1.NbrOfConversionFlag=1
-ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.Rank-0\#ChannelRegularConversion=1
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_5CYCLE
-ADC1.SingleDiff-0\#ChannelRegularConversion=ADC_DIFFERENTIAL_ENDED
-ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -140,176 +131,156 @@ MMTConfigApplied=false
 Mcu.CPN=STM32U599NJH6Q
 Mcu.ContextProject=TrustZoneDisabled
 Mcu.Family=STM32U5
-Mcu.IP0=ADC1
-Mcu.IP1=ADF1
-Mcu.IP10=FLASH
-Mcu.IP11=GPU2D
-Mcu.IP12=GTZC
-Mcu.IP13=HASH
-Mcu.IP14=ICACHE
-Mcu.IP15=LPBAM
-Mcu.IP16=LPBAMQUEUE
-Mcu.IP17=LPTIM2
-Mcu.IP18=LTDC
-Mcu.IP19=MEMORYMAP
-Mcu.IP2=CORDIC
-Mcu.IP20=NVIC
-Mcu.IP21=OCTOSPI1
-Mcu.IP22=PWR
-Mcu.IP23=RCC
-Mcu.IP24=RNG
-Mcu.IP25=RTC
-Mcu.IP26=SDMMC1
-Mcu.IP27=SPI2
-Mcu.IP28=SYS
-Mcu.IP29=TIM3
-Mcu.IP3=CORTEX_M33_NS
-Mcu.IP30=TIM5
-Mcu.IP31=TIM6
-Mcu.IP32=TIM8
-Mcu.IP33=TIM15
-Mcu.IP4=CRC
-Mcu.IP5=DCACHE1
-Mcu.IP6=DCACHE2
-Mcu.IP7=DEBUG
-Mcu.IP8=DMA2D
-Mcu.IP9=FDCAN1
-Mcu.IPNb=34
+Mcu.IP0=ADF1
+Mcu.IP1=CORDIC
+Mcu.IP10=GPU2D
+Mcu.IP11=GTZC
+Mcu.IP12=HASH
+Mcu.IP13=ICACHE
+Mcu.IP14=LPBAM
+Mcu.IP15=LPBAMQUEUE
+Mcu.IP16=LTDC
+Mcu.IP17=MEMORYMAP
+Mcu.IP18=NVIC
+Mcu.IP19=OCTOSPI1
+Mcu.IP2=CORTEX_M33_NS
+Mcu.IP20=PWR
+Mcu.IP21=RCC
+Mcu.IP22=RNG
+Mcu.IP23=RTC
+Mcu.IP24=SDMMC1
+Mcu.IP25=SPI2
+Mcu.IP26=SYS
+Mcu.IP27=TIM6
+Mcu.IP28=TIM8
+Mcu.IP29=TIM15
+Mcu.IP3=CRC
+Mcu.IP4=DCACHE1
+Mcu.IP5=DCACHE2
+Mcu.IP6=DEBUG
+Mcu.IP7=DMA2D
+Mcu.IP8=FDCAN1
+Mcu.IP9=FLASH
+Mcu.IPNb=30
 Mcu.Name=STM32U599NJHxQ
 Mcu.Package=TFBGA216
 Mcu.Pin0=PE0
 Mcu.Pin1=PB7
-Mcu.Pin10=PC8
-Mcu.Pin100=PA7
-Mcu.Pin101=PC4
-Mcu.Pin102=PF14
-Mcu.Pin103=PE14
-Mcu.Pin104=PB15
-Mcu.Pin105=VP_CORDIC_VS_CORDIC
-Mcu.Pin106=VP_CRC_VS_CRC
-Mcu.Pin107=VP_DCACHE1_VS_DCACHE
-Mcu.Pin108=VP_DCACHE2_VS_DCACHE
-Mcu.Pin109=VP_DMA2D_VS_DMA2D
-Mcu.Pin11=PC14-OSC32_IN (PC14)
-Mcu.Pin110=VP_FLASH_SIG_Activate_FlashIP
-Mcu.Pin111=VP_GPU2D_VS_GPU2D
-Mcu.Pin112=VP_GTZC_VS_GTZC_Enable
-Mcu.Pin113=VP_HASH_VS_HASH
-Mcu.Pin114=VP_ICACHE_VS_ICACHE
-Mcu.Pin115=VP_LPBAMQUEUE_VS_QUEUE
-Mcu.Pin116=VP_OCTOSPI1_VS_octo
-Mcu.Pin117=VP_PWR_V_PVD_IN
-Mcu.Pin118=VP_PWR_VS_DBSignals
-Mcu.Pin119=VP_PWR_VS_SECSignals
-Mcu.Pin12=PE1
-Mcu.Pin120=VP_PWR_VS_LPOM
-Mcu.Pin121=VP_PWR_Vdda
-Mcu.Pin122=VP_RNG_VS_RNG
-Mcu.Pin123=VP_RTC_VS_RTC_Activate
-Mcu.Pin124=VP_RTC_VS_RTC_Calendar
-Mcu.Pin125=VP_SYS_VS_tim2
-Mcu.Pin126=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin127=VP_TIM15_VS_ClockSourceINT
-Mcu.Pin128=VP_LPBAM_VS_SIG1
-Mcu.Pin129=VP_LPBAM_VS_SIG4
-Mcu.Pin13=PB5
-Mcu.Pin130=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.Pin131=VP_STMicroelectronics.X-CUBE-FREERTOS_VS_CMSISJjRTOS2_10.4.6_1.0.1
-Mcu.Pin14=PG13
-Mcu.Pin15=PG10
-Mcu.Pin16=PD5
-Mcu.Pin17=PD2
-Mcu.Pin18=PC11
-Mcu.Pin19=PH7
+Mcu.Pin10=PC14-OSC32_IN (PC14)
+Mcu.Pin100=VP_LPBAMQUEUE_VS_QUEUE
+Mcu.Pin101=VP_OCTOSPI1_VS_octo
+Mcu.Pin102=VP_PWR_V_PVD_IN
+Mcu.Pin103=VP_PWR_VS_DBSignals
+Mcu.Pin104=VP_PWR_VS_SECSignals
+Mcu.Pin105=VP_PWR_VS_LPOM
+Mcu.Pin106=VP_RNG_VS_RNG
+Mcu.Pin107=VP_RTC_VS_RTC_Activate
+Mcu.Pin108=VP_RTC_VS_RTC_Calendar
+Mcu.Pin109=VP_SYS_VS_tim2
+Mcu.Pin11=PB5
+Mcu.Pin110=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin111=VP_TIM15_VS_ClockSourceINT
+Mcu.Pin112=VP_LPBAM_VS_SIG1
+Mcu.Pin113=VP_LPBAM_VS_SIG4
+Mcu.Pin114=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin115=VP_STMicroelectronics.X-CUBE-FREERTOS_VS_CMSISJjRTOS2_10.4.6_1.0.1
+Mcu.Pin12=PG10
+Mcu.Pin13=PD2
+Mcu.Pin14=PC11
+Mcu.Pin15=PH7
+Mcu.Pin16=PH5
+Mcu.Pin17=PA12
+Mcu.Pin18=PA11
+Mcu.Pin19=PC7
 Mcu.Pin2=PB6
-Mcu.Pin20=PH5
-Mcu.Pin21=PA12
-Mcu.Pin22=PA11
-Mcu.Pin23=PC7
-Mcu.Pin24=PC15-OSC32_OUT (PC15)
-Mcu.Pin25=PE3
-Mcu.Pin26=PI5
-Mcu.Pin27=PB9
-Mcu.Pin28=PB8
-Mcu.Pin29=PD1
+Mcu.Pin20=PC15-OSC32_OUT (PC15)
+Mcu.Pin21=PE3
+Mcu.Pin22=PI5
+Mcu.Pin23=PB9
+Mcu.Pin24=PB8
+Mcu.Pin25=PD1
+Mcu.Pin26=PC12
+Mcu.Pin27=PH4
+Mcu.Pin28=PA13 (JTMS/SWDIO)
+Mcu.Pin29=PC9
 Mcu.Pin3=PG9
-Mcu.Pin30=PC12
-Mcu.Pin31=PH4
-Mcu.Pin32=PA13 (JTMS/SWDIO)
-Mcu.Pin33=PC9
-Mcu.Pin34=PI6
-Mcu.Pin35=PB4 (NJTRST)
-Mcu.Pin36=PG14
-Mcu.Pin37=PD0
-Mcu.Pin38=PA10
-Mcu.Pin39=PG6
-Mcu.Pin4=PD4
-Mcu.Pin40=PG3
-Mcu.Pin41=PJ4
-Mcu.Pin42=PE6
-Mcu.Pin43=PE2
-Mcu.Pin44=PG8
-Mcu.Pin45=PJ0
-Mcu.Pin46=PC13
-Mcu.Pin47=PG4
-Mcu.Pin48=PG2
-Mcu.Pin49=PI4
-Mcu.Pin5=PD3
-Mcu.Pin50=PI1
-Mcu.Pin51=PI2
-Mcu.Pin52=PI3
-Mcu.Pin53=PF4
-Mcu.Pin54=PF3
-Mcu.Pin55=PD15
-Mcu.Pin56=PI0
-Mcu.Pin57=PF10
-Mcu.Pin58=PF7
-Mcu.Pin59=PF9
-Mcu.Pin6=PC10
-Mcu.Pin60=PD11
-Mcu.Pin61=PC1
-Mcu.Pin62=PF6
-Mcu.Pin63=PF8
-Mcu.Pin64=PA2
-Mcu.Pin65=PA4
-Mcu.Pin66=PB1
-Mcu.Pin67=PF13
-Mcu.Pin68=PE8
-Mcu.Pin69=PE13
-Mcu.Pin7=PA15 (JTDI)
-Mcu.Pin70=PB11
-Mcu.Pin71=PD12
-Mcu.Pin72=PH0-OSC_IN (PH0)
-Mcu.Pin73=PC3
-Mcu.Pin74=PA0
-Mcu.Pin75=PB0
-Mcu.Pin76=PF12
-Mcu.Pin77=PG1
-Mcu.Pin78=PE7
-Mcu.Pin79=PE15
-Mcu.Pin8=PA14 (JTCK/SWCLK)
-Mcu.Pin80=PE12
-Mcu.Pin81=PB10
-Mcu.Pin82=PD8
-Mcu.Pin83=PD13
-Mcu.Pin84=PD14
-Mcu.Pin85=PC2
-Mcu.Pin86=PC0
-Mcu.Pin87=PA1
-Mcu.Pin88=PA3
-Mcu.Pin89=PA6
-Mcu.Pin9=PA8
-Mcu.Pin90=PC5
-Mcu.Pin91=PF11
-Mcu.Pin92=PF15
-Mcu.Pin93=PE9
-Mcu.Pin94=PE10
-Mcu.Pin95=PE11
-Mcu.Pin96=PB14
-Mcu.Pin97=PD10
-Mcu.Pin98=PD9
-Mcu.Pin99=PA5
-Mcu.PinsNb=132
+Mcu.Pin30=PI6
+Mcu.Pin31=PB4 (NJTRST)
+Mcu.Pin32=PD0
+Mcu.Pin33=PA10
+Mcu.Pin34=PG3
+Mcu.Pin35=PE6
+Mcu.Pin36=PG8
+Mcu.Pin37=PJ0
+Mcu.Pin38=PC13
+Mcu.Pin39=PG4
+Mcu.Pin4=PD3
+Mcu.Pin40=PG2
+Mcu.Pin41=PI4
+Mcu.Pin42=PI1
+Mcu.Pin43=PI2
+Mcu.Pin44=PI3
+Mcu.Pin45=PF4
+Mcu.Pin46=PF3
+Mcu.Pin47=PD15
+Mcu.Pin48=PI0
+Mcu.Pin49=PF10
+Mcu.Pin5=PC10
+Mcu.Pin50=PF7
+Mcu.Pin51=PF9
+Mcu.Pin52=PD11
+Mcu.Pin53=PH11
+Mcu.Pin54=PC1
+Mcu.Pin55=PF6
+Mcu.Pin56=PF8
+Mcu.Pin57=PA2
+Mcu.Pin58=PA4
+Mcu.Pin59=PB1
+Mcu.Pin6=PA15 (JTDI)
+Mcu.Pin60=PE8
+Mcu.Pin61=PE13
+Mcu.Pin62=PD12
+Mcu.Pin63=PH0-OSC_IN (PH0)
+Mcu.Pin64=PC3
+Mcu.Pin65=PB0
+Mcu.Pin66=PG1
+Mcu.Pin67=PE7
+Mcu.Pin68=PE12
+Mcu.Pin69=PB10
+Mcu.Pin7=PA14 (JTCK/SWCLK)
+Mcu.Pin70=PD8
+Mcu.Pin71=PD13
+Mcu.Pin72=PC2
+Mcu.Pin73=PC0
+Mcu.Pin74=PA1
+Mcu.Pin75=PA3
+Mcu.Pin76=PA6
+Mcu.Pin77=PF11
+Mcu.Pin78=PE9
+Mcu.Pin79=PE10
+Mcu.Pin8=PA8
+Mcu.Pin80=PE11
+Mcu.Pin81=PB14
+Mcu.Pin82=PD10
+Mcu.Pin83=PD9
+Mcu.Pin84=PA5
+Mcu.Pin85=PA7
+Mcu.Pin86=PC4
+Mcu.Pin87=PB2
+Mcu.Pin88=PE14
+Mcu.Pin89=PB15
+Mcu.Pin9=PC8
+Mcu.Pin90=VP_CORDIC_VS_CORDIC
+Mcu.Pin91=VP_CRC_VS_CRC
+Mcu.Pin92=VP_DCACHE1_VS_DCACHE
+Mcu.Pin93=VP_DCACHE2_VS_DCACHE
+Mcu.Pin94=VP_DMA2D_VS_DMA2D
+Mcu.Pin95=VP_FLASH_SIG_Activate_FlashIP
+Mcu.Pin96=VP_GPU2D_VS_GPU2D
+Mcu.Pin97=VP_GTZC_VS_GTZC_Enable
+Mcu.Pin98=VP_HASH_VS_HASH
+Mcu.Pin99=VP_ICACHE_VS_ICACHE
+Mcu.PinsNb=116
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-FREERTOS.1.0.1
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -344,20 +315,12 @@ OCTOSPI1.DelayHoldQuarterCycle=HAL_OSPI_DHQC_ENABLE
 OCTOSPI1.FifoThreshold=4
 OCTOSPI1.IPParameters=MemoryType,FifoThreshold,ChipSelectHighTime,ClockPrescaler,DelayHoldQuarterCycle
 OCTOSPI1.MemoryType=HAL_OSPI_MEMTYPE_MACRONIX
-PA0.Locked=true
-PA0.Signal=USART2_CTS
 PA1.Locked=true
 PA1.Mode=OCTOSPI1_Port1_DQS
 PA1.Signal=OCTOSPIM_P1_DQS
 PA10.Locked=true
-PA11.GPIOParameters=GPIO_Speed
-PA11.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA11.Locked=true
-PA11.Signal=USB_OTG_HS_DM
-PA12.GPIOParameters=GPIO_Speed
-PA12.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA12.Locked=true
-PA12.Signal=USB_OTG_HS_DP
 PA13\ (JTMS/SWDIO).Locked=true
 PA13\ (JTMS/SWDIO).Mode=Serial_Wire
 PA13\ (JTMS/SWDIO).Signal=DEBUG_JTMS-SWDIO
@@ -369,32 +332,18 @@ PA2.Locked=true
 PA2.Mode=OCTOSPI1_Port1_NCS
 PA2.Signal=OCTOSPIM_P1_NCS
 PA3.Locked=true
-PA3.Signal=USART2_RX
 PA4.Locked=true
 PA5.Locked=true
 PA6.Locked=true
-PA6.Mode=IN11-Differential
-PA6.Signal=ADC1_IN11
 PA7.Locked=true
-PA7.Mode=IN11-Differential
-PA7.Signal=ADC1_IN12
 PA8.Locked=true
-PA8.Mode=Clock-out
-PA8.Signal=RCC_MCO
 PB0.Locked=true
 PB1.Locked=true
-PB1.Mode=Encoder_mode_occur1
-PB1.Signal=LPTIM2_IN1
 PB10.Locked=true
-PB11.GPIOParameters=GPIO_Speed
-PB11.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PB11.Locked=true
-PB11.Signal=I2C4_SDA
 PB14.Locked=true
 PB14.Signal=S_TIM15_CH1
 PB15.Locked=true
-PB15.Mode=Encoder_mode_occur1
-PB15.Signal=LPTIM2_IN2
+PB2.Locked=true
 PB4\ (NJTRST).Locked=true
 PB4\ (NJTRST).Mode=MOD_ADF_CCK
 PB4\ (NJTRST).Signal=ADF1_SDI0
@@ -452,10 +401,7 @@ PC4.GPIOParameters=GPIO_Label
 PC4.GPIO_Label=R_INT
 PC4.Locked=true
 PC4.Signal=GPIO_Input
-PC5.Locked=true
-PC5.Signal=USART3_RX
 PC7.Locked=true
-PC7.Signal=S_TIM3_CH2
 PC8.GPIOParameters=GPIO_Speed_High_Only
 PC8.GPIO_Speed_High_Only=GPIO_SPEED_FREQ_VERY_HIGH
 PC8.Locked=true
@@ -496,10 +442,6 @@ PD13.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD13.Locked=true
 PD13.Mode=RGB565
 PD13.Signal=LTDC_VSYNC
-PD14.GPIOParameters=GPIO_Speed
-PD14.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PD14.Locked=true
-PD14.Signal=LTDC_B2
 PD15.GPIOParameters=GPIO_Speed
 PD15.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD15.Locked=true
@@ -515,10 +457,6 @@ PD3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD3.Locked=true
 PD3.Mode=RGB565
 PD3.Signal=LTDC_CLK
-PD4.Locked=true
-PD4.Signal=USART2_RTS
-PD5.Locked=true
-PD5.Signal=USART2_TX
 PD8.GPIOParameters=GPIO_Speed
 PD8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD8.Locked=true
@@ -534,8 +472,6 @@ PE0.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PE0.Locked=true
 PE0.Mode=RGB565
 PE0.Signal=LTDC_HSYNC
-PE1.Locked=true
-PE1.Signal=USART6_TX
 PE10.GPIOParameters=GPIO_Speed
 PE10.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PE10.Locked=true
@@ -561,14 +497,6 @@ PE14.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PE14.Locked=true
 PE14.Mode=RGB565
 PE14.Signal=LTDC_G7
-PE15.GPIOParameters=GPIO_Speed
-PE15.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PE15.Locked=true
-PE15.Signal=LTDC_R2
-PE2.GPIOParameters=GPIO_Speed
-PE2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PE2.Locked=true
-PE2.Signal=LTDC_R0
 PE3.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE3.GPIO_Label=CTP_RST
 PE3.GPIO_PuPd=GPIO_PULLDOWN
@@ -603,22 +531,6 @@ PF11.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PF11.Locked=true
 PF11.Mode=RGB565
 PF11.Signal=LTDC_DE
-PF12.GPIOParameters=GPIO_Speed
-PF12.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PF12.Locked=true
-PF12.Signal=LTDC_B0
-PF13.GPIOParameters=GPIO_Speed
-PF13.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PF13.Locked=true
-PF13.Signal=LTDC_B1
-PF14.GPIOParameters=GPIO_Speed
-PF14.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PF14.Locked=true
-PF14.Signal=LTDC_G0
-PF15.GPIOParameters=GPIO_Speed
-PF15.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PF15.Locked=true
-PF15.Signal=LTDC_G1
 PF3.Locked=true
 PF3.Mode=MOD_MDF_CCK0
 PF3.Signal=ADF1_CCK0
@@ -644,21 +556,9 @@ PG1.GPIO_Label=R_CS
 PG1.Locked=true
 PG1.Signal=GPIO_Output
 PG10.Locked=true
-PG13.GPIOParameters=GPIO_Speed
-PG13.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PG13.Locked=true
-PG13.Signal=I2C1_SDA
-PG14.GPIOParameters=GPIO_Speed
-PG14.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PG14.Locked=true
-PG14.Signal=I2C1_SCL
 PG2.Locked=true
 PG3.Locked=true
 PG4.Locked=true
-PG6.GPIOParameters=GPIO_Speed
-PG6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PG6.Locked=true
-PG6.Signal=LTDC_R1
 PG8.GPIOParameters=GPIO_Label
 PG8.GPIO_Label=USB_PWR_EN
 PG8.Locked=true
@@ -667,20 +567,14 @@ PG9.Locked=true
 PH0-OSC_IN\ (PH0).Locked=true
 PH0-OSC_IN\ (PH0).Mode=HSE-External-Clock-Source
 PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
-PH4.GPIOParameters=GPIO_Speed
-PH4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PH11.Locked=true
 PH4.Locked=true
-PH4.Signal=I2C2_SCL
-PH5.GPIOParameters=GPIO_Speed
-PH5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PH5.Locked=true
-PH5.Signal=I2C2_SDA
 PH7.GPIOParameters=GPIO_Label
 PH7.GPIO_Label=LCD_DISP_RESET
 PH7.Locked=true
 PH7.Signal=GPIO_Output
 PI0.Locked=true
-PI0.Signal=S_TIM5_CH4
 PI1.GPIOParameters=GPIO_Speed
 PI1.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PI1.Locked=true
@@ -704,8 +598,6 @@ PJ0.GPIOParameters=GPIO_Label
 PJ0.GPIO_Label=USB_OVERCURRENT
 PJ0.Locked=true
 PJ0.Signal=GPIO_Input
-PJ4.Locked=true
-PJ4.Signal=USART6_RX
 PWR.IPParameters=PowerMode
 PWR.PowerMode=PWR_SMPS_SUPPLY
 PinOutPanel.CurrentBGAView=Top
@@ -741,7 +633,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_ADF1_Init-ADF1-false-HAL-true,5-MX_CRC_Init-CRC-false-HAL-true,6-MX_DCACHE1_Init-DCACHE1-false-HAL-true,7-MX_DCACHE2_Init-DCACHE2-false-HAL-true,8-MX_DMA2D_Init-DMA2D-false-HAL-true,9-MX_FDCAN1_Init-FDCAN1-false-HAL-true,10-MX_GPU2D_Init-GPU2D-false-HAL-true,11-MX_HASH_Init-HASH-false-HAL-true,12-MX_I2C1_Init-I2C1-false-HAL-true,13-MX_I2C2_Init-I2C2-false-HAL-true,14-MX_ICACHE_Init-ICACHE-false-HAL-true,15-MX_LTDC_Init-LTDC-false-HAL-true,16-MX_OCTOSPI1_Init-OCTOSPI1-false-HAL-true,17-MX_RNG_Init-RNG-false-HAL-true,18-MX_RTC_Init-RTC-false-HAL-true,19-MX_SDMMC1_SD_Init-SDMMC1-true-HAL-true,20-MX_ADC2_Init-ADC2-false-HAL-true,21-MX_CORDIC_Init-CORDIC-false-HAL-true,22-MX_LPTIM2_Init-LPTIM2-false-HAL-true,23-MX_SPI2_Init-SPI2-false-HAL-true,24-MX_TIM3_Init-TIM3-false-HAL-true,25-MX_TIM5_Init-TIM5-false-HAL-true,26-MX_TIM6_Init-TIM6-false-HAL-true,27-MX_TIM8_Init-TIM8-false-HAL-true,28-MX_TIM15_Init-TIM15-false-HAL-true,29-MX_USART2_UART_Init-USART2-false-HAL-true,30-MX_USART6_UART_Init-USART6-false-HAL-true,31-MX_FLASH_Init-FLASH-false-HAL-true,32-MX_GTZC_Init-GTZC-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADF1_Init-ADF1-false-HAL-true,4-MX_CRC_Init-CRC-false-HAL-true,5-MX_DCACHE1_Init-DCACHE1-false-HAL-true,6-MX_DCACHE2_Init-DCACHE2-false-HAL-true,7-MX_DMA2D_Init-DMA2D-false-HAL-true,8-MX_FDCAN1_Init-FDCAN1-false-HAL-true,9-MX_GPU2D_Init-GPU2D-false-HAL-true,10-MX_HASH_Init-HASH-false-HAL-true,11-MX_ICACHE_Init-ICACHE-false-HAL-true,12-MX_LTDC_Init-LTDC-false-HAL-true,13-MX_OCTOSPI1_Init-OCTOSPI1-false-HAL-true,14-MX_RNG_Init-RNG-false-HAL-true,15-MX_RTC_Init-RTC-false-HAL-true,16-MX_SDMMC1_SD_Init-SDMMC1-true-HAL-true,17-MX_CORDIC_Init-CORDIC-false-HAL-true,18-MX_SPI2_Init-SPI2-false-HAL-true,19-MX_TIM6_Init-TIM6-false-HAL-true,20-MX_TIM8_Init-TIM8-false-HAL-true,21-MX_TIM15_Init-TIM15-false-HAL-true,22-MX_FLASH_Init-FLASH-false-HAL-true,23-MX_GTZC_Init-GTZC-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
 RCC.ADCFreq_Value=16000000
 RCC.ADF1Freq_Value=160000000
 RCC.AHBFreq_Value=160000000
@@ -837,10 +729,6 @@ SH.GPXTI6.0=GPIO_EXTI6
 SH.GPXTI6.ConfNb=1
 SH.S_TIM15_CH1.0=TIM15_CH1,PWM Generation1 CH1
 SH.S_TIM15_CH1.ConfNb=1
-SH.S_TIM3_CH2.0=TIM3_CH2,PWM_Input_2
-SH.S_TIM3_CH2.ConfNb=1
-SH.S_TIM5_CH4.0=TIM5_CH4,PWM Generation4 CH4
-SH.S_TIM5_CH4.ConfNb=1
 SH.S_TIM8_CH2.0=TIM8_CH2,Output Compare2 CH2
 SH.S_TIM8_CH2.ConfNb=1
 SPI2.CalculateBaudRate=80.0 MBits/s
@@ -862,8 +750,6 @@ TIM15.IPParameters=Prescaler,PeriodNoDither,Channel-PWM Generation1 CH1,PulseNoD
 TIM15.PeriodNoDither=999
 TIM15.Prescaler=4
 TIM15.PulseNoDither_1=997
-TIM5.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM5.IPParameters=Channel-PWM Generation4 CH4
 TIM8.Channel-Output\ Compare2\ CH2=TIM_CHANNEL_2
 TIM8.IPParameters=Channel-Output Compare2 CH2
 VP_CORDIC_VS_CORDIC.Mode=CORDIC_Activate
@@ -904,8 +790,6 @@ VP_PWR_VS_SECSignals.Mode=Security/Privilege
 VP_PWR_VS_SECSignals.Signal=PWR_VS_SECSignals
 VP_PWR_V_PVD_IN.Mode=Mode_PVD_Int
 VP_PWR_V_PVD_IN.Signal=PWR_V_PVD_IN
-VP_PWR_Vdda.Mode=isolationVdda
-VP_PWR_Vdda.Signal=PWR_Vdda
 VP_RNG_VS_RNG.Mode=RNG_Activate
 VP_RNG_VS_RNG.Signal=RNG_VS_RNG
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
