--- a/riverdi-50-stm32u5-lvgl.ioc
+++ b/riverdi-50-stm32u5-lvgl.ioc
@@ -318,7 +318,10 @@ OCTOSPI1.MemoryType=HAL_OSPI_MEMTYPE_MACRONIX
 PA1.Locked=true
 PA1.Mode=OCTOSPI1_Port1_DQS
 PA1.Signal=OCTOSPIM_P1_DQS
+PA10.GPIOParameters=GPIO_Label
+PA10.GPIO_Label=RME_P1
 PA10.Locked=true
+PA10.Signal=GPIO_Input
 PA11.Locked=true
 PA12.Locked=true
 PA13\ (JTMS/SWDIO).Locked=true
@@ -327,19 +330,40 @@ PA13\ (JTMS/SWDIO).Signal=DEBUG_JTMS-SWDIO
 PA14\ (JTCK/SWCLK).Locked=true
 PA14\ (JTCK/SWCLK).Mode=Serial_Wire
 PA14\ (JTCK/SWCLK).Signal=DEBUG_JTCK-SWCLK
+PA15\ (JTDI).GPIOParameters=GPIO_Label
+PA15\ (JTDI).GPIO_Label=CME_P1
 PA15\ (JTDI).Locked=true
+PA15\ (JTDI).Signal=GPIO_Input
 PA2.Locked=true
 PA2.Mode=OCTOSPI1_Port1_NCS
 PA2.Signal=OCTOSPIM_P1_NCS
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=BUTTON_1
 PA3.Locked=true
+PA3.Signal=GPIO_Input
 PA4.Locked=true
 PA5.Locked=true
+PA6.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=BUTTON_3
 PA6.Locked=true
+PA6.Signal=GPIO_Input
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=BUTTON_4
 PA7.Locked=true
+PA7.Signal=GPIO_Input
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=RME_P4
 PA8.Locked=true
+PA8.Signal=GPIO_Input
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=CME_P3
 PB0.Locked=true
+PB0.Signal=GPIO_Input
 PB1.Locked=true
+PB10.GPIOParameters=GPIO_Label
+PB10.GPIO_Label=TME_P1
 PB10.Locked=true
+PB10.Signal=GPIO_Input
 PB14.Locked=true
 PB14.Signal=S_TIM15_CH1
 PB15.Locked=true
@@ -347,7 +371,10 @@ PB2.Locked=true
 PB4\ (NJTRST).Locked=true
 PB4\ (NJTRST).Mode=MOD_ADF_CCK
 PB4\ (NJTRST).Signal=ADF1_SDI0
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=CME_P4
 PB5.Locked=true
+PB5.Signal=GPIO_Input
 PB6.Locked=true
 PB7.Locked=true
 PB8.GPIOParameters=GPIO_Speed,GPIO_PuPd
@@ -555,21 +582,39 @@ PG1.GPIOParameters=GPIO_Label
 PG1.GPIO_Label=R_CS
 PG1.Locked=true
 PG1.Signal=GPIO_Output
+PG10.GPIOParameters=GPIO_Label
+PG10.GPIO_Label=TME_P2
 PG10.Locked=true
+PG10.Signal=GPIO_Input
+PG2.GPIOParameters=GPIO_Label
+PG2.GPIO_Label=TME_P4
 PG2.Locked=true
+PG2.Signal=GPIO_Input
 PG3.Locked=true
 PG4.Locked=true
 PG8.GPIOParameters=GPIO_Label
 PG8.GPIO_Label=USB_PWR_EN
 PG8.Locked=true
 PG8.Signal=GPIO_Output
+PG9.GPIOParameters=GPIO_Label
+PG9.GPIO_Label=TME_P3
 PG9.Locked=true
+PG9.Signal=GPIO_Input
 PH0-OSC_IN\ (PH0).Locked=true
 PH0-OSC_IN\ (PH0).Mode=HSE-External-Clock-Source
 PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
+PH11.GPIOParameters=GPIO_Label
+PH11.GPIO_Label=BUTTON_2
 PH11.Locked=true
+PH11.Signal=GPIO_Input
+PH4.GPIOParameters=GPIO_Label
+PH4.GPIO_Label=RME_P2
 PH4.Locked=true
+PH4.Signal=GPIO_Input
+PH5.GPIOParameters=GPIO_Label
+PH5.GPIO_Label=RME_P3
 PH5.Locked=true
+PH5.Signal=GPIO_Input
 PH7.GPIOParameters=GPIO_Label
 PH7.GPIO_Label=LCD_DISP_RESET
 PH7.Locked=true
@@ -590,7 +635,10 @@ PI3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PI3.Locked=true
 PI3.Mode=Full_Duplex_Master
 PI3.Signal=SPI2_MOSI
+PI4.GPIOParameters=GPIO_Label
+PI4.GPIO_Label=CME_P2
 PI4.Locked=true
+PI4.Signal=GPIO_Input
 PI5.Locked=true
 PI6.Locked=true
 PI6.Signal=S_TIM8_CH2
